# rib

./: Makefile  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  rib.c
include/: mem.h  rib.h  util.h
src/: main.c  mem.c  rib.c  util.c
